# DTSGeneration

./: .gitignore  README.md  REPRODUCE.md  REPRODUCTION.md  SETUP.md  pyproject.toml
assets/comparison/: compare.ts
assets/declaration/: package-lock.json  package.json  transpile.js  transpile_with_bundle.cjs
assets/tools/: count_escaped_package_names.py  get_openai_models.py
assets/typescript_comparison/: comparison.ts
dts_generation/: __init__.py  __main__.py  _compare_dts.py  _comparison.py  _declaration.py  _evaluation.py  _example.py  _examplification.py  _generate_dts.py  _generate_js.py  _generation.py  _utils.py
dts_generation/_utils/: __init__.py  _build.py  _helpers.py  _shared.py  _shell.py
