[project]
name = "dts_generation"
version = "1.0.0"
description = "A Python project for generating and comparing TypeScript .d.ts files for NPM packages."
authors = [{name = "Leonardo Mieschendahl"}]
dependencies = [
    "openai == 1.106.0",
    "easy_prompting @ git+https://github.com/Mieschendahl/EasyPrompting.git@v3.1.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build*", "dist*", "dev*"]
